apps/web/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        - name: data
          nfs:
            path: "/k8s-volumes/ephemeral/archmirror/data"
            server: 192.168.1.2
      containers:
        - name: web
          image: npastorale/web:0.0.1
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "8Gi"
              cpu: "4"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
